Include translations for preview

--- a/preview/Makefile
+++ b/preview/Makefile
@@ -4,4 +4,5 @@ serve_preview: copy_files
 copy_files:
 	cp -r ../{fonts,images,favicon.ico,styles.*.css,header.*.js*} .
 	mkdir -p _includes && cp ../{footer.html,header.html} _includes
+	mkdir -p _includes && cp ../languages/{footer-*.html,header-*.html} _includes
 	mkdir -p _data && cp ../assets-manifest.json _data/manifest.json
