--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
     "url": "https://github.com/mbta/dotcomchrome.git"
   },
   "homepage": "https://github.com/mbta/dotcomchrome#readme",
-  "private": true
+  "private": true,
+  "scripts": {
+    "copy-assets": "./preview/copy-assets.sh",
+    "preview": "cd preview && npx @11ty/eleventy --serve"
+  },
+  "dependencies": {
+    "@11ty/eleventy": "^2.0.1"
+  }
 }
